@@ -1,3 +1,10 @@
+2556.	[cleanup]	PCI compliance:
+			* new libisc log module file
+			* isc_dir_chroot() now also changes the working
+			  directory to "/".
+			* additional INSISTs
+			* additional logging when files can't be removed.
+
 2553.	[bug]		Reference leak on DNSSEC validation errors. [RT #19291]
 
 2552.	[bug]		zero-no-soa-ttl-cache was not being honoured.
